--- a/Samples/CameraCaptureUI/CameraCaptureUI.Android/Resources/layout/activity_main.axml
+++ b/Samples/CameraCaptureUI/CameraCaptureUI.Android/Resources/layout/activity_main.axml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+	android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-</RelativeLayout>
+
+	<Button android:id="@+id/capture_image_button" 
+		android:text="@string/capture_image"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content" />
+
+</LinearLayout>
