--- a/Samples/CameraCaptureUI/CameraCaptureUI.Windows/MainPage.xaml
+++ b/Samples/CameraCaptureUI/CameraCaptureUI.Windows/MainPage.xaml
@@ -2,13 +2,57 @@
     x:Class="CameraCaptureUI.Windows.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CameraCaptureUI.Windows"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:CameraCaptureUI.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
 
-    <Grid>
-
-    </Grid>
+    <ScrollViewer
+        HorizontalScrollMode="Disabled"
+        VerticalScrollBarVisibility="Auto"
+        VerticalScrollMode="Auto">
+        <Grid
+            x:Name="LayoutRoot"
+            Padding="10"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid x:Name="Input" Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <TextBlock
+                    Grid.Row="0"
+                    HorizontalAlignment="Left"
+                    Style="{StaticResource BodyTextBlockStyle}"
+                    Text="Use the CameraCaptureUI API to capture an image or video."
+                    TextWrapping="Wrap" />
+                <StackPanel
+                    Grid.Row="1"
+                    Margin="0,10"
+                    Orientation="Horizontal">
+                    <Button
+                        x:Name="CaptureImage"
+                        Margin="0,0,10,0"
+                        Click="CaptureImage_Click"
+                        Content="Capture Image" />
+                </StackPanel>
+            </Grid>
+            <Grid
+                x:Name="Output"
+                Grid.Row="1"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top">
+                <Image
+                    x:Name="OutputImage"
+                    Grid.Row="0"
+                    HorizontalAlignment="Left" />
+            </Grid>
+        </Grid>
+    </ScrollViewer>
 </Page>
